--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       target: '#n8n-chat',
       mode: 'fullscreen',
       showWelcomeScreen: false,
-      enableStreaming: false,
+      enableStreaming: true,
       loadPreviousSession: true,
 
       initialMessages: [
