change webhook node

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
   <script type="module">
     import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js';
 
-    const WEBHOOK_URL = 'https://n8n.meistericham.com/webhook/cfc0414c-8105-427f-bc13-b0ca2df2b8b8/chat';
+    const WEBHOOK_URL = 'https://n8n.meistericham.com/webhook/aichatbot';
     const COOLDOWN_MS = 10_000;         // 10s between sends
     const FAILSAFE_UNLOCK_MS = 25_000;  // auto-unlock if no assistant msg
     const IDLE_RESET_MIN = 3;           // auto-clear session lock after 3 mins idle
