--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     // ======= CONFIG =======
     const CHAT_WEBHOOK = 'https://n8n.meistericham.com/webhook/aichatbot';
     const VERIFY_WEBHOOK = 'https://n8n.meistericham.com/webhook/verify-captcha';
-    const RECAPTCHA_SITE_KEY = 'YOUR_RECAPTCHA_SITE_KEY';
+    const RECAPTCHA_SITE_KEY = '6Lf0xsErAAAAAM7vVvRIqb5JI_2Kf0p10aGzJ88W';
 
     // Guards
     const COOLDOWN_MS = 10_000;         // 10s between sends
